# funnel-vision

./: CMakeLists.txt  LICENSE.md  README.md  funnel.cxx  prog-doc.odt  project-doc.odt
docs/: index.html
include/: asynchronous.h  mesh.h  meshobject.h  scenemapper.h  utility.h
src/: asynchronous.cxx  main.cxx  mesh.cxx  meshobject.cxx  scenemapper.cxx  utility.cxx
